--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<hmtl></hmtl>
 <head>
     <meta charset="utf-8">
     <title>Logistica - Shipping Company Website Template</title>
